<resources>
    <string name="app_name">MidnightDiner</string>
    <string name="search_for_recipes">Search for recipes</string>
    <string name="list_of_ingredients">List of ingredients</string>
    <string name="steps">步驟</string>
    <string name="step_by_step_instructions">Step by step instructions</string>
    <string name="ingredients">食材</string>
    <string name="recipe_description">Recipe Description</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="write_a_comment">評論</string>
    <string name="submit">Submit</string>
    <string name="search">Search</string>
    <string name="categories">食譜分類</string>
    <string name="recommended">熱門的</string>
    <string name="home">Home</string>
    <string name="Search_Recipe">搜尋食譜</string>
    <string name="Popular_Recipe">熱門食譜</string>
    <string name="midnight_diner">深夜小廚房</string>
    <string name="nick_name">暱稱</string>
    <string name="give_star">評分</string>
    <string name="give_comment">評論</string>
    <string name="send_comment">送出評論</string>
</resources>